--- a/css/style.css
+++ b/css/style.css
@@ -1,54 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-   Reset code starts here
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/*Code starts here */
 body {
   font-size: 16px;
   background-color: #ffffff;
@@ -58,61 +7,39 @@ body {
 
 nav {
   background-color: rgba(0,0,0,.5);
-  float: left;
   position: fixed;
   width: 100%;
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
 	font-weight: 600;
-	line-height: 2.75;
-}
-
-h2 {
-  font-size: 225%;
-	line-height: 3.5;
+	line-height: 2.25;
 }
 
 h3 {
-	font-size: 150%;
+	font-size: 130%;
 	font-style: italic;
 	line-height: 1.5;
 }
 
-h4 {
-	font-size: 130%;
-	line-height: 1.5;
-}
-
-h5 {
-	font-size: 120%;
-	line-height: 1.5;
-}
-
-h6 {
-	font-size: 110%;
-	line-height: 1.5;
-}
 
 caption {
-	font-style: 60%;
+	font-style: 40%;
 	line-height: normal;
 }
 
 p {
   font-size: 120%;
 	line-height: 1.6;
-	padding-top: 50px;
+	margin: 10px;
+	margin-left: 0;
+	margin-top: 20px;
 }
 
 .logo {
   margin: 20px;
   width: 100px;
-}
-
-.large-pic {
-  width: 100%;
 }
 
 .medium-pic {
